# sorting-parquet-writer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: datafusion_comparison.rs  sort_record_batch.rs  sorting_writer.rs
examples/: sort-checker.rs  sort-parquet.rs
src/: error.rs  lib.rs  record_batch.rs  sorting.rs  utils.rs
src/record_batch/: build.rs  merge_type.rs  streaming_merge.rs
src/record_batch/merge_type/: num.rs  timestamp.rs
src/sorting/: buffer.rs
src/test/: generation.rs  mod.rs  random_time.rs  ticker.rs
src/writers/: mod.rs  progress.rs  sorted_groups_writer.rs  sorting_writer.rs
