[package]
name = "sorting-parquet-writer"
version = "0.1.0"
edition = "2024"
description = "A Rust library for writing sorted Parquet files using Apache Arrow."
license = "Apache-2.0 OR MIT"
authors = ["Wyatt Herkamp <wherkamp@gmail.com>"]
repository = "https://github.com/wyatt-herkamp/sorting-parquet-writer"
documentation = "https://docs.rs/sorting-parquet-writer"
readme = "README.md"

[dependencies]
arrow = { version = "58", features = ["chrono-tz"] }
arrow-schema = "58"
arrow-row = "58"
parquet = "58"
thiserror = "2"

tempfile = "3"
[features]
tests = []

[dev-dependencies]
chrono = "0.4"
anyhow = "1"
tempfile = "3"
rand = "0.10"
arrow = { version = "58", features = ["prettyprint"] }
humantime = "2"
criterion = "0.8"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"

[[bench]]
name = "sort_record_batch"
harness = false

[[bench]]
name = "sorting_writer"
harness = false
